--- a/content/blog/22-06-17.md
+++ b/content/blog/22-06-17.md
@@ -2,16 +2,18 @@
 title: "Website is up!"
 date: 2022-08-11T11:22:16+06:00
 description : "We launched our website"
-image: "/photos/litmus.jpg"
+image: "/photos/coder.jpg"
 author: "Juan"
 ---
 
 
 Ayus Health is now up!
 
+It is hosted by Pantrypoints at https://ayus.pantrypoints.com
 
-## The Pantrypoints System
 
-Unlike other sites that allow only money payments, our system allows moneyless payments via the [Pantrypoints system](https://pantrypoints.com).
+## What is Pantrypoints?
+
+[Pantrypoints](https://pantrypoints.com) is a barter credit system that pegs value to 1 kilogram of rice. This allows people to avail of products or services even when they have no money. 
 
 To know more about points, visit [https://superphysics.org/social/economics/end-of-capitalism/](https://superphysics.org/social/economics/end-of-capitalism/)
