--- a/content/blog/23-01-22.md
+++ b/content/blog/23-01-22.md
@@ -1,16 +1,15 @@
 ---
 title: "Ayus Lactus With Potentised C From Malunggay"
 date: 2022-08-11T11:22:16+06:00
-description : "Basic Principles: The Theory Of Biochemical Treatment"
-image: "/photos/malunggay.jpg"
+description : "Herbs like ginseng, ginger root, gotukola and malunggay strengthen and support weak tissues"
+image: "/photos/moringa1.jpg"
 author: "Jose"
 ---
 
 
-
 ### HERBS 
 
-Herbs like GINSENG, GINGER root, GOTUKOLA and MALUNGGAY strengthen and support WEAK tissues.
+Herbs like ginseng, ginger root, gotukola and malunggay strengthen and support weak tissues.
 
 They are naturally occurring sources of nutrition in the form of VITAMINS, MINERAL, ENZYMES and important intrinsic factors combined in such a way that they are BALANCED and respond rapidly in the body.  As catalysts, essential nutrients are readily assimilated by our body.
 
