--- a/content/blog/23-01-23.md
+++ b/content/blog/23-01-23.md
@@ -1,5 +1,5 @@
 ---
-title: "Ayus Lactus With Potentised C From Malunggay"
+title: "Why Whey is Desirable"
 date: 2022-08-11T11:22:16+06:00
 description : "WHEY is the greenish-yellowish clear substance that gets out of the cheese curd during the draining process"
 image: "/photos/whey.jpg"
