--- a/content/blog/23-01-24.md
+++ b/content/blog/23-01-24.md
@@ -1,22 +1,22 @@
 ---
-title: "LACTOSE or Milk Sugar"
+title: "Lactose or Milk Sugar"
 date: 2022-08-11T11:22:16+06:00
-description : "LACTOSE or milk sugar is the main carbohydrate found in milk"
-image: "/photos/whey.jpg"
+description : "Lactose or milk sugar is the main carbohydrate found in milk"
+image: "/photos/milk.jpg"
 author: "Jose"
 ---
 
 
-LACTOSE or milk sugar is the main carbohydrate found in milk.  
+Lactose or milk sugar is the main carbohydrate found in milk.  
 
-It is a disaccharide -- it can be hydrolyzed into 2 other sugars, GLUCOSE (dextrose or corn sugar) and GALACTOSE.  Blood glucose is a precursor of LACTOSE.  Two protein substances function in its synthesis.  The A protein is the enzyme, galactosyl transferase; the B protein is lactalbumin, the same lactalbumin present in WHEY.[1]
+It is a disaccharide -- it can be hydrolyzed into 2 other sugars, GLUCOSE (dextrose or corn sugar) and GALactose.  Blood glucose is a precursor of Lactose.  Two protein substances function in its synthesis.  The A protein is the enzyme, galactosyl transferase; the B protein is lactalbumin, the same lactalbumin present in WHEY.[1]
 
 Lactose was first introduced as a constituent of milk in 1615, but it was not until 1780  that the Swedish chemist, CLO SCHEELE, showed that it is a SUGAR.  The commercial manufacture of lactose began in SWITZERLAND about 1889.  Usually it is prepared from the WHEY obtained as a by-product in the manufacture of cheese.
 
 
-## USE OF LACTOSE
+## Use of Lactose
 
-Much milk sugar is used as a constituent of infant food & medicinal products.  Physicians prescribe LACTOSE for the modification of cow’s milk for infant feeding in order to bring its composition closer to that of women’s milk.  It has been suggested that GALACTOSE (which is present in lactose) is needed in the early stages of formation of the brain.
+Much milk sugar is used as a constituent of infant food & medicinal products.  Physicians prescribe Lactose for the modification of cow’s milk for infant feeding in order to bring its composition closer to that of women’s milk.  It has been suggested that GALactose (which is present in lactose) is needed in the early stages of formation of the brain.
 
 VALUES are expressed /100 grams of PRODUCT:
 
@@ -41,9 +41,13 @@ Phosphorus (mg)	| 1,353 | 758
 Ash (g)	| 11 | 6
 Moisture | 4.5 | 2.7
 
-The word “AYUS LACTUS”  is composed of two terms, AYUSH  meaning ‘LIFE’ and LACTUS meaning ‘MILK’.  Thus etymologically, “AYUS LACTUS” means the ‘MILK OF LIFE’  providing nutrition to our life’s VITAL FORCE  or (dynamis).
+<!-- The word “AYUS LACTUS”  is composed of two terms, AYUSH  meaning ‘LIFE’ and LACTUS meaning ‘MILK’.  Thus etymologically, “AYUS LACTUS” means the ‘MILK OF LIFE’  providing nutrition to our life’s VITAL FORCE  or (dynamis). -->
 
-Our  VITAL FORCE is nothing but the NATURAL DEFENCE  mechanism of the body comprising the RTICULO-ENDOTHELIAL SYSTEM (RES) and the PSYCHO-NEURO-ENDOCRINE  system (PSNES).  It is well known that this mechanism, also called the IMMUNE SYSTEM,  rallies the forces to protect the body when it is threatened by harmful external forces.  The reaction of the defense mechanism produces symptoms such as PAIN, FEVER, MUCUS, COUGH ….  It is to be understood, that FEVER, for example, is NOT always harmful, as it is needed to inactivate many viruses, stimulate cytokines to envelope and carry away irritating toxic sustances; while COUGHING, helps to throw it out as mucus, establishing homeostasis in our body.
+Our VITAL FORCE is nothing but the NATURAL DEFENCE  mechanism of the body comprising the RTICULO-ENDOTHELIAL SYSTEM (RES) and the PSYCHO-NEURO-ENDOCRINE  system (PSNES).  
+
+It is well known that this mechanism, also called the IMMUNE SYSTEM, rallies the forces to protect the body when it is threatened by harmful external forces.  The reaction of the defense mechanism produces symptoms such as PAIN, FEVER, MUCUS, COUGH, etc.
+
+It is to be understood, that FEVER, for example, is NOT always harmful, as it is needed to inactivate many viruses, stimulate cytokines to envelope and carry away irritating toxic sustances; while COUGHING, helps to throw it out as mucus, establishing homeostasis in our body.
 
 AYUS LACTUS is a good and nourishing food supplement as it seeks to SUPPORT the harmonious function of our body system.  The synergism of its individual INGREDIENTS helps maintain health while helping our body heal itself.  It can be safely taken alone or in combination with other forms of treatment modality without any SIDE EFFECTS.
 
