--- a/content/blog/23-02-01.md
+++ b/content/blog/23-02-01.md
@@ -2,7 +2,7 @@
 title: "What are Biochemic Salts?"
 date: 2023-02-01T11:22:16+06:00
 description : "Biochemic Salts, also known as tissue salts, was developed by Dr William H. Schuessler, a German physician, in the late 1800’s"
-image: "/photos/whey.jpg"
+image: "/photos/iodine.jpg"
 author: "Jose"
 ---
 
